# ki-interview

./: .gitignore  README.md  db.sqlite-journal  main.py  pyproject.toml  snippet.py
src/: database.py  llms.py  settings.py
src/models/: db.py  onboarding.py
src/onboarding/: __init__.py  models.py  pdf_processor.py  prompts.py  router.py
