[project]
name = "chi2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "greenlet>=2.0.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-openai>=0.2.11",
    "lxml>=6.0.1",
    "pdf2image>=1.17.0",
    "pdftotext>=2.2.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.1",
    "sqlmodel>=0.0.22",
]
